Hands on outline v1 (#2)
* doc: add outline

* doc: add some items

* chore: add bin exclusion in .gitignore

* doc: add some outlines

* chore: add github workflow

* doc: links, doc

* doc: update MD and add openapi.yml
chore: improve gradle build files

* doc: fix readme

* doc: improve documentation
chore: add openapi generation support and mapstruct / gradle

* chore: remote /api prefix in the gateway

* chore: add scripts
doc: add excerpt new data

* doc: add jq

* doc: roadmap api

* doc: update doc, schemas

* feat: :fire: API First and mapstruct support :white_check_mark: ( + useless classes removal )
doc: :page_facing_up: fix preamble and the beginning of the workshop
fix: :hammer: scripts located in bin folder

* typos

* doc: typos, backwards compatibility

* feature: add spring authorization server , TODO add more tests to get a token

* fix: add authz server github action

* fix: add github action gradle cache

* feat: premier test avec l'authorization server vs credentials flow

* feat: premiere version authz-server

* chore: refactoring

* typos

* typos

* feat(security) first configuration

* feat(security) first configuration

* feat(security) first configuration

* feat(security) first configuration

* typos

* fix unit test

Co-authored-by: Alexandre Touret <alexandre-touret@users.noreply.github.com>